# diceAPP

./: .gitignore  CMakeLists.txt  README.md  build.gradle  local.properties  mirai修改注意事项.txt  proguard-rules.pro
src/main/: AndroidManifest.xml
src/main/aidl/org/mirai/zhao/dice/: IConsoleService.aidl  ILogCallback.aidl  ILoginCallbak.aidl
src/main/assets/: 404.html  defaultConfig.txt
src/main/java/fightcent/permissionrequest/: PermissionRequest.java  PermissionRequestFragment.java
src/main/java/java/lang/management/: MemoryMXBean.java
src/main/java/org/bouncycastle/jce/provider/: BouncyCastleProvider.java
src/main/java/org/mirai/zhao/dice/: AccountsManager.kt  AndroidHtml.kt  AppContext.kt  (+4 more)
src/main/jni/libmad/: minimad.c
src/main/jni/libspeex/: bits.c  mdf.c  preprocess.c  resample.c  scal.c
src/main/jni/mp3Detect/: mp3Detector.c
src/main/jni/silkV3Encoder/: easy_mad.c  silkV3Decoder.c  silk_decoder.c
src/main/jni/speexResample/: audioResample.c
src/main/res/color/: navigation_menu_item_color.xml
src/main/res/layout/: activity_dice_center.xml  activity_editor.xml  activity_login.xml  activity_qrcode.xml  activity_unsafe_login.xml  app_bar_main.xml  content_inputer.xml  fragment_accounts.xml  fragment_console.xml  fragment_home.xml  fragment_settings.xml  fragment_settings_child.xml  fragment_settings_parent.xml  nav_header_main.xml
src/main/res/menu/: activity_main_drawer.xml
src/main/res/navigation/: mobile_navigation.xml
src/main/res/values/: strings.xml  themes.xml
src/miraiCore/assets/ti.qq.com/: AegisReport.js  qrcode.js
(+37 files in other folders)
